# vpi-export

./: .gitmodules  Cargo.toml  README.md
examples/: Makefile  README.md
examples/rtl/: bitvec.v  str.v  test.v
examples/src/: bitvec.rs  str.rs  test.rs
vpi_example/: .gitignore  Cargo.toml
vpi_example/src/: lib.rs
vpi_examples/: Cargo.toml  Makefile
vpi_examples/rtl/: bitvec.v  clk.v  coroutine.v
vpi_examples/src/: bitvec.rs  clk.rs  coroutine.rs
vpi_export/: Cargo.toml  README.md  build.rs
vpi_export/src/: __hidden__.rs  bitvec.rs  clk.rs  handle.rs  impls.rs  lib.rs  vpi_iter.rs  vpi_user.rs
vpi_export/src/marker/: input.rs  input_output.rs  mod.rs  output.rs
vpi_export/tests/: main.rs
vpi_export_macro/: Cargo.toml  README.md
vpi_export_macro/src/: lib.rs
vpi_user/: Cargo.toml  README.md  build.rs
vpi_user/src/: lib.rs
