[package]
name = "vpi_examples"
version = "0.1.0"
edition = "2021"

[[example]]
name = "coroutine"
path = "src/coroutine.rs"
crate-type = ["cdylib"]

[[example]]
name = "bitvec"
path = "src/bitvec.rs"
crate-type = ["cdylib"]

[[example]]
name = "clk"
path = "src/clk.rs"
crate-type = ["cdylib"]

[dependencies]
vpi_export = { version = "0.1.9", path = "../vpi_export" }
