[package]
name = "vpi_export"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "Export Rust function to be used on a verilog module through VPI"
documentation = "https://docs.rs/vpi-export"
repository = "https://github.com/Andful/vpi-export"
homepage = "https://github.com/Andful/vpi-export"
readme = "../README.md"

[dependencies]
ctor = "0.2.9"
vpi_export_macro = "0.1.3"

[build-dependencies]
bindgen = "0.70.1"
