[package]
name = "vpi_export"
version = "0.1.8"
edition = "2021"
license = "MIT"
description = "Export Rust function to be used on a verilog module through VPI"
documentation = "https://docs.rs/vpi-export"
repository = "https://github.com/Andful/vpi-export"
homepage = "https://github.com/Andful/vpi-export"
readme = "../README.md"
keywords = ["no_std", "verilog", "vpi", "ffi", "fpga"]
categories = ["development-tools::ffi", "development-tools::debugging"]

[dependencies]
ctor = "0.2.9"
vpi_user = "0.1.0"
vpi_export_macro = { path = "../vpi_export_macro" }

[build-dependencies]
bindgen = "0.70.1"
git2 = "0.19.0"
