[package]
name = "vpi_export_macro"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "proc-macro for vpi_export"
documentation = "https://docs.rs/vpi-export-macro"
repository = "https://github.com/Andful/vpi-export"
homepage = "https://github.com/Andful/vpi-export"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.92"
quote = "1.0.37"
regex = "1.11.1"
syn = { version = "2.0.89", features = ["full"] }
