[package]
name = "vpi_user"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "vpi_user.h"
documentation = "https://docs.rs/vpi-user"
repository = "https://github.com/Andful/vpi-export"
homepage = "https://github.com/Andful/vpi-export"
keywords = ["no_std", "verilog", "vpi", "ffi", "fpga"]
categories = ["development-tools::ffi", "development-tools::debugging"]


[features]
default = ["ghdl"]
ghdl = []
verilator = []
iverilog = []

[dependencies]

[build-dependencies]
bindgen = "0.70.1"
